test/e2e/gateway-api.lock.json
{
  "version": "v1.9.1",
  "url": "https://github.com/envoyproxy/gateway/releases/download/v1.9.1/install.yaml",
  "sha256": "72b3971364f172eb0b9636c7142cc84ff695467bc065897958bde85a3c06cfd5"
}
